Update favicon and refine site configuration
Replaced the favicon with a new design and streamlined the site
description to match the 'Corpo em batalha' brand theme. Disabled the
hero section to simplify homepage visuals. These changes enhance brand
consistency and improve user experience.

--- a/src/yml/site.yml
+++ b/src/yml/site.yml
@@ -1,14 +1,13 @@
 name: Corpo em batalha
 title: Corpo em batalha
-description: Jekflix is a template for Jekyll inspired by Netflix and made by
-  Thiago Rossener.
+description: Corpo em batalha
 tags:
   - blog
   - template
   - jekyll
   - theme
   - netlify
-show_hero: true
+show_hero: false
 menu:
   - title: Home
     url: /
