Updated site description and enabled hero section
The site's description has been expanded to provide a clearer depiction
of the "Corpo em batalha" documentary series. Additionally, the hero
section is now displayed to enhance visual appeal and user engagement.

--- a/src/yml/site.yml
+++ b/src/yml/site.yml
@@ -1,13 +1,13 @@
 name: Corpo em batalha
 title: Corpo em batalha
-description: Corpo em batalha
+description: Corpo em batalha é uma série documental que acompanha as batalhas de dança na cidade de Fortaleza.
 tags:
   - blog
   - template
   - jekyll
   - theme
   - netlify
-show_hero: false
+show_hero: true
 menu:
   - title: Home
     url: /
