--- a/src/yml/site.yml
+++ b/src/yml/site.yml
@@ -1,6 +1,8 @@
+formspree_form_id: formspree_form_id
 name: Corpo em batalha
 title: Corpo em batalha
-description: Corpo em batalha é uma série documental que acompanha as batalhas de dança na cidade de Fortaleza.
+description: Corpo em batalha é uma série documental que acompanha as batalhas
+  de dança na cidade de Fortaleza.
 tags:
   - blog
   - template
@@ -18,8 +20,4 @@ menu:
   - title: Feed
     url: /feed.xml
 email: youremail@test.com
-# See: https://disqus.com/
-disqus_username: disqus_username
-# Contact Form Setting
-# See: https://formspree.io/
-formspree_form_id: formspree_form_id
+disqus_username: ""
